--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
 <h1>Wilkommen</h1>
+<h2 id="Text2">Lolol</h2>
+<button id="Button1">Start</button>
+<script>
+  document.getElementById("Button1").addEventListener("click", function () {
+    document.getElementById("Text2").textContent = "Nö"
+  })
+</script>
