Fix button functionality and alert message

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <h1>Wilkommen</h1>
 <h2 id="Text2">Lolol</h2>
 <button id="Button1">Start</button>
+<button onclick=window.alert("hi")
 <script>
-  document.getElementById("Button1").addEventListener("click", function () {
-    document.getElementById("Text2").textContent = "Nö"
-  })
+ function(button1)
+  
 </script>
